--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     color: #f5f6f7;
-    background-color: #444;
+    background-color: #fff;
     padding: 0;
 }
 
